added a rest description to todo

--- a/porfoilo/public/index.html
+++ b/porfoilo/public/index.html
@@ -7,6 +7,8 @@
     <title>Hompage</title>
 </head>
 <body>
+    <a href="about">About Page</a>
+    <a href="contact">Contact</a>
     <P>Porfolio Biodate</P>
     <ul>
         <li>Name: Henry Ugochukwu Agu</li>
